--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,17 @@
           <artifactId>h2</artifactId>
           <scope>runtime</scope>
       </dependency>
+      
+      <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-databind</artifactId>
+          <version>2.15.2</version>
+      </dependency>
+      <dependency>
+          <groupId>com.fasterxml.jackson.dataformat</groupId>
+          <artifactId>jackson-dataformat-xml</artifactId>
+          <version>2.15.2</version>
+      </dependency>
     </dependencies>
     
     <!-- Build section -->
