--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
 		        <artifactId>spring-security-core</artifactId>
 		        <version>5.8.0</version>
 		    </dependency>
+		    
+		    <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
 		
 		<!-- Thymeleaf -->
         <dependency>
