Renamed project package.

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.enviro.assessment.grad001.sivesandla</groupId>
+    <groupId>com.enviro.assessment.inter001.sivesandla</groupId>
     <artifactId>betaecocycle</artifactId>
     <version>1.0.0</version>
     
